welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[Color](6) 
	getCouleurSol();
	for(i<-0 to 5) { avance(); t[i]==getCouleurSol() ; t[i]=t[i+1]; }
	
}
